# powrap

./: .gitignore  .pre-commit-hooks.yaml  .travis.yml  .woodpecker.yml  LICENSE  Makefile  README.rst  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  wrap.c  wrap.py
.github/workflows/: tests.yml
poindent/: __init__.py  poindent.py
powrap/: __init__.py  __main__.py  powrap.py
tests/: test_fix_style.py  test_powrap.py
tests/bad/: glossary.po  invalid_po_file.po
tests/good/: glossary.po
