[metadata]
name = powrap
version = attr: powrap.__version__
description = Find and properly reindent .po files.
long_description = file: README.rst
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/AFPy/powrap
keywords = powrap, po, gettext, i18n
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
packages = powrap
python_requires = >= 3.6
install_requires =
  tqdm
  polib >= 1.1.1

[options.entry_points]
console_scripts = powrap=powrap.powrap:main
